--- a/OpenEdXMobile/res/values/dimens.xml
+++ b/OpenEdXMobile/res/values/dimens.xml
@@ -294,4 +294,8 @@
     <item name="course_date_title_line_spacing" type="dimen" format="float">1.25</item>
     <item name="course_date_desc_line_spacing" type="dimen" format="float">1.125</item>
 
+    <!--  Course Celebratory Modal  -->
+    <dimen name="celebratory_modal_padding">16dp</dimen>
+    <dimen name="celebratory_share_button_size">34dp</dimen>
+
 </resources>
