--- a/OpenEdXMobile/res/layout/fragment_add_post.xml
+++ b/OpenEdXMobile/res/layout/fragment_add_post.xml
@@ -19,7 +19,7 @@
             android:paddingEnd="@dimen/edx_margin"
             android:paddingTop="@dimen/widget_margin"
             android:paddingBottom="@dimen/widget_margin"
-            android:background="@color/white">
+            android:background="@color/brand_bg_color">
 
             <RadioGroup
                 android:id="@+id/discussion_question_segmented_group"
@@ -67,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:background="@color/brand_bg_color"
             android:orientation="vertical"
             android:paddingStart="@dimen/edx_margin"
             android:paddingTop="@dimen/widget_margin"
