--- a/OpenEdXMobile/res/layout/fragment_authenticated_webview.xml
+++ b/OpenEdXMobile/res/layout/fragment_authenticated_webview.xml
@@ -21,6 +21,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@color/white" />
+            android:background="@color/brand_bg_color" />
     </LinearLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
