--- a/OpenEdXMobile/res/drawable/edx_primary_bordered_button.xml
+++ b/OpenEdXMobile/res/drawable/edx_primary_bordered_button.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <stroke android:color="@color/neutralDark" android:width="1dp" />
+            <stroke android:color="@color/brand_bordered_button_border_color" android:width="1dp" />
             <solid android:color="@android:color/transparent" />
         </shape>
     </item>
