--- a/OpenEdXMobile/res/layout/activity_course_base.xml
+++ b/OpenEdXMobile/res/layout/activity_course_base.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/brand_bg_color"
     android:fitsSystemWindows="true">
     <!--
     As part of LEARNER-4143 we removed DrawerLayout from the whole app but we've kept it here cuz
