--- a/OpenEdXMobile/res/layout/activity_single_fragment_base.xml
+++ b/OpenEdXMobile/res/layout/activity_single_fragment_base.xml
@@ -4,7 +4,7 @@
     android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/brand_bg_color"
     android:fitsSystemWindows="true">
 
     <View
