--- a/OpenEdXMobile/res/layout/edit_user_profile_switch.xml
+++ b/OpenEdXMobile/res/layout/edit_user_profile_switch.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="@dimen/edx_margin"
-    android:background="@color/white">
+    android:background="@color/brand_bg_color">
 
     <TextView
         android:id="@+id/label"
