--- a/OpenEdXMobile/res/layout/fragment_course_dates_page.xml
+++ b/OpenEdXMobile/res/layout/fragment_course_dates_page.xml
@@ -37,7 +37,7 @@
                         android:id="@+id/rv_dates"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/white"
+                        android:background="@color/brand_bg_color"
                         android:clipToPadding="false"
                         android:fastScrollEnabled="true"
                         android:padding="@dimen/date_block_half_x_margin"
