--- a/OpenEdXMobile/res/layout/fragment_course_detail.xml
+++ b/OpenEdXMobile/res/layout/fragment_course_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/brand_bg_color"
     android:orientation="vertical"
     android:paddingStart="@dimen/common_course_display_margin_side"
     android:paddingEnd="@dimen/common_course_display_margin_side">
