--- a/OpenEdXMobile/res/layout/fragment_course_unit_empty.xml
+++ b/OpenEdXMobile/res/layout/fragment_course_unit_empty.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/white"
+    android:background="@color/brand_bg_color"
     android:gravity="center"
     android:orientation="vertical">
 
