--- a/OpenEdXMobile/res/layout/fragment_course_unit_grade.xml
+++ b/OpenEdXMobile/res/layout/fragment_course_unit_grade.xml
@@ -68,7 +68,7 @@
             android:id="@+id/container_layout_not_available"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
+            android:background="@color/brand_bg_color"
             android:gravity="center"
             android:orientation="vertical">
 
