--- a/OpenEdXMobile/res/layout/fragment_discussion_responses_or_comments.xml
+++ b/OpenEdXMobile/res/layout/fragment_discussion_responses_or_comments.xml
@@ -9,7 +9,7 @@
         android:id="@+id/ll_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/brand_bg_color"
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
