--- a/OpenEdXMobile/res/layout/fragment_discussion_search_posts.xml
+++ b/OpenEdXMobile/res/layout/fragment_discussion_search_posts.xml
@@ -17,7 +17,7 @@
         android:id="@+id/discussion_posts_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/brand_bg_color"
         android:visibility="invisible"
         tools:listitem="@layout/row_discussion_thread"
         tools:visibility="visible" />
