--- a/OpenEdXMobile/res/layout/fragment_discussion_thread_posts.xml
+++ b/OpenEdXMobile/res/layout/fragment_discussion_thread_posts.xml
@@ -15,7 +15,7 @@
             android:id="@+id/spinners_container"
             android:layout_width="match_parent"
             android:layout_height="@dimen/discussion_post_refine_layout_height"
-            android:background="@color/white"
+            android:background="@color/brand_bg_color"
             android:orientation="horizontal"
             android:visibility="gone"
             tools:visibility="visible">
@@ -55,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:background="@color/brand_bg_color"
             android:visibility="invisible"
             tools:listitem="@layout/row_discussion_thread"
             tools:visibility="visible" />
