--- a/OpenEdXMobile/res/layout/fragment_discussion_topics.xml
+++ b/OpenEdXMobile/res/layout/fragment_discussion_topics.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/brand_bg_color"
         android:orientation="vertical">
 
         <SearchView
@@ -23,7 +23,7 @@
             android:id="@+id/discussion_topics_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
+            android:background="@color/brand_bg_color"
             tools:listitem="@layout/row_discussion_topic" />
 
     </LinearLayout>
