--- a/OpenEdXMobile/res/layout/fragment_edit_user_profile.xml
+++ b/OpenEdXMobile/res/layout/fragment_edit_user_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/brand_bg_color"
     android:fillViewport="true">
 
     <FrameLayout
@@ -22,7 +22,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
+                android:background="@color/brand_bg_color"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingBottom="@dimen/widget_margin"
