--- a/OpenEdXMobile/res/layout/fragment_form_field_select.xml
+++ b/OpenEdXMobile/res/layout/fragment_form_field_select.xml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@color/brand_bg_color"
     android:choiceMode="singleChoice"/>
