--- a/OpenEdXMobile/res/layout/fragment_settings.xml
+++ b/OpenEdXMobile/res/layout/fragment_settings.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/brand_bg_color"
     tools:context="org.edx.mobile.view.SettingsFragment">
 
     <LinearLayout
@@ -17,7 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@color/brand_bg_color"
             android:orientation="horizontal"
             android:padding="@dimen/edx_margin">
 
@@ -58,7 +58,7 @@
             android:id="@+id/sd_card_setting_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@color/brand_bg_color"
             android:orientation="horizontal"
             android:padding="@dimen/edx_margin">
 
