--- a/OpenEdXMobile/res/layout/fragment_user_profile.xml
+++ b/OpenEdXMobile/res/layout/fragment_user_profile.xml
@@ -17,7 +17,7 @@
                 android:id="@+id/profile_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
+                android:background="@color/brand_bg_color"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/edx_margin">
