--- a/OpenEdXMobile/res/layout/fragment_webview_with_paddings.xml
+++ b/OpenEdXMobile/res/layout/fragment_webview_with_paddings.xml
@@ -3,7 +3,7 @@
     android:id="@+id/content_error_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/brand_bg_color"
     android:orientation="vertical"
     android:paddingStart="@dimen/common_course_display_margin_side"
     android:paddingTop="@dimen/common_course_display_margin_top"
