--- a/OpenEdXMobile/res/layout/item_course_date_block.xml
+++ b/OpenEdXMobile/res/layout/item_course_date_block.xml
@@ -23,7 +23,7 @@
         android:id="@+id/item_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/brand_bg_color"
         android:orientation="horizontal">
 
         <View
