--- a/OpenEdXMobile/res/layout/row_section_header.xml
+++ b/OpenEdXMobile/res/layout/row_section_header.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/brand_bg_color">
 
     <View
         android:id="@+id/row_separator"
