Show green checkmarks for completion of components - LEARNER-8166
- Ajax call intercepter to check the HTML and other webivew
  type components completion.

- Add content-description/a11y-identifier to checkmark icon
  such that it say "Completed" when Talkback focuses it.

--- a/OpenEdXMobile/res/layout/fragment_course_outline.xml
+++ b/OpenEdXMobile/res/layout/fragment_course_outline.xml
@@ -26,12 +26,15 @@
             android:choiceMode="singleChoice"
             android:divider="@null"
             android:dividerHeight="0dp"
+            tools:listitem="@layout/row_course_outline_list"
             tools:visibility="visible" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <include layout="@layout/loading_indicator" />
 
-    <include layout="@layout/content_error" />
+    <include
+        layout="@layout/content_error"
+        android:visibility="gone" />
 
     <FrameLayout
         android:id="@+id/fragment_container"
