--- a/OpenEdXMobile/res/values/dimens.xml
+++ b/OpenEdXMobile/res/values/dimens.xml
@@ -263,7 +263,6 @@
     <dimen name="button_horizontal_padding">22dp</dimen>
     <dimen name="divider_with_text_margin">12dp</dimen>
     <dimen name="transcript_row_height">50dp</dimen>
-    <dimen name="whats_new_image_horizontal_margin">25dp</dimen>
     <dimen name="shadow_view_height">4dp</dimen>
     <dimen name="container_padding">12dp</dimen>
     <dimen name="radio_tab_height">32dp</dimen>
@@ -301,5 +300,9 @@
     <!--  Course Celebratory Modal  -->
     <dimen name="celebratory_modal_padding">16dp</dimen>
     <dimen name="celebratory_share_button_size">34dp</dimen>
+
+    <!-- What's New -->
+    <dimen name="whats_new_image_horizontal_margin">25dp</dimen>
+    <dimen name="whats_new_bottom_bar_min_height">46dp</dimen>
 
 </resources>
