--- a/OpenEdXMobile/res/drawable/ic_bookmark_border.xml
+++ b/OpenEdXMobile/res/drawable/ic_bookmark_border.xml
@@ -7,10 +7,10 @@
     <group
         android:pivotX="12"
         android:pivotY="12"
-        android:scaleX="1.1"
-        android:scaleY="1.1">
+        android:scaleX="1.25"
+        android:scaleY="1.25">
         <path
             android:fillColor="@android:color/white"
-            android:pathData="M12,12c-1.1,0 -2,-0.9 -2,-2s0.9,-2 2,-2 2,0.9 2,2 -0.9,2 -2,2zM12,2c-4.2,0 -8,3.22 -8,8.2 0,3.32 2.67,7.25 8,11.8 5.33,-4.55 8,-8.48 8,-11.8C20,5.22 16.2,2 12,2z" />
+            android:pathData="M19,3L5,3v18l7,-3 7,3L19,3zM17,18l-5,-2.18L7,18L7,5h10v13z" />
     </group>
 </vector>
