--- a/OpenEdXMobile/res/drawable/ic_chat.xml
+++ b/OpenEdXMobile/res/drawable/ic_chat.xml
@@ -7,5 +7,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M8,5v14l11,-7L8,5z" />
+        android:pathData="M22,2L2.01,2L2,22l4,-4h16L22,2zM6,9h12v2L6,11L6,9zM14,14L6,14v-2h8v2zM18,8L6,8L6,6h12v2z" />
 </vector>
